fixed the text alignment issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1198,7 +1198,7 @@ img {
   }
 
   .about__description{
-    text-align: initial;
+    text-align: justify;
   }
 
   .about__info{
